--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     color: var(--text-color);
-    overflow-x: hidden; /* Permite rolagem horizontal se necessário, mas impede rolagem horizontal */
+    overflow-x: hidden; /* Permite rolagem horizontal se necessário */
+    overflow-y: auto; /* Garante rolagem vertical */
 }
 
 .background-video {
